Mon Nov 18 12:28:43 2002                        Michael Jennings (mej)

Remove acinclude.m4 now that libast.m4 has all that stuff in it.

Hopefully improve exit handling.

Change "export TERM=vt100" to the portable "TERM=vt100; export TERM"
syntax.
----------------------------------------------------------------------
Thu Nov 21 14:03:23 2002                        Michael Jennings (mej)

Fix for Debian Bug #169933, seg fault with invalid default font index.
----------------------------------------------------------------------
Thu Nov 21 14:11:29 2002                        Michael Jennings (mej)

Fixed a typo noted by Bill Allombert <allomber@math.u-bordeaux.fr>.
----------------------------------------------------------------------
Tue Nov 26 17:51:34 2002                        Michael Jennings (mej)

I need my Escreen sessions to be able to beep, so let's allow that.
----------------------------------------------------------------------
Wed Nov 27 15:17:04 2002                        Michael Jennings (mej)

Same as yesterday, only this time I'm *actually* going to fix the
problem. >:I  I should really read more carefully.

While I was at it, I fixed some bad uses of BEG_STRCASECMP().
----------------------------------------------------------------------
Tue Dec 10 16:50:29 2002                        Michael Jennings (mej)

A few fixes from Andre Pang <ozone@algorithm.com.au>.  One for big-
endian machines, one for automake >= 1.6, and one for using the cut
buffers with the copy/paste script functions.
----------------------------------------------------------------------
Thu Jan  2 14:54:45 2003                        Michael Jennings (mej)

Spec file update.
----------------------------------------------------------------------
Wed Jan  8 01:16:29 2003                        Michael Jennings (mej)

Fixed a bug with non-bordered icons being rendered at 0 size.
----------------------------------------------------------------------